==> nopnop2002/esp-idf-rf69/components/rf69/rf69.c <==
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include <driver/spi_master.h>
#include <driver/gpio.h>
#include "esp_log.h"
#include <rf69.h>
#define TAG "RF69"
#define RH_BROADCAST_ADDRESS 0xff
#define CONFIG_FSK (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_FSK | RH_RF69_DATAMODUL_MODULATIONSHAPING_FSK_NONE)
#define CONFIG_GFSK (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_FSK | RH_RF69_DATAMODUL_MODULATIONSHAPING_FSK_BT1_0)
#define CONFIG_OOK (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_OOK | RH_RF69_DATAMODUL_MODULATIONSHAPING_OOK_NONE)
#define CONFIG_NOWHITE (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_NONE | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define CONFIG_WHITE (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_WHITENING | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define CONFIG_MANCHESTER (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_MANCHESTER | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define HOST_ID SPI2_HOST
#define HOST_ID SPI3_HOST
#define LOW 0
#define HIGH 1
#define delayMicroseconds(us) esp_rom_delay_us(us)
#define delay(ms) esp_rom_delay_us(ms*1000)
#define millis() xTaskGetTickCount()*portTICK_PERIOD_MS

uint8_t spiRead(uint8_t reg)
{
	uint8_t val;
	gpio_set_level(CONFIG_NSS_GPIO, LOW);
	spi_transfer(reg & ~RH_RF69_SPI_WRITE_MASK); // Send the address with the write mask off
	val = spi_transfer(0); // The written value is ignored, reg value is read
	gpio_set_level(CONFIG_NSS_GPIO, HIGH);
	return val;
}

uint8_t spiWrite(uint8_t reg, uint8_t val)
{
	uint8_t status = 0;
	gpio_set_level(CONFIG_NSS_GPIO, LOW);
	status = spi_transfer(reg | RH_RF69_SPI_WRITE_MASK); // Send the address with the write mask on
	spi_transfer(val); // New value follows
	gpio_set_level(CONFIG_NSS_GPIO, HIGH);
	return status;
}

uint8_t spiBurstRead(uint8_t reg, uint8_t* dest, uint8_t len)
{
	uint8_t status = 0;
	gpio_set_level(CONFIG_NSS_GPIO, LOW);
	status = spi_transfer(reg & ~RH_RF69_SPI_WRITE_MASK); // Send the start address with the write mask off
	while (len--) *dest++ = spi_transfer(0);
	gpio_set_level(CONFIG_NSS_GPIO, HIGH);
	return status;
}

uint8_t spiBurstWrite(uint8_t reg, const uint8_t* src, uint8_t len)
{
	uint8_t status = 0;
	gpio_set_level(CONFIG_NSS_GPIO, LOW);
	status = spi_transfer(reg | RH_RF69_SPI_WRITE_MASK); // Send the start address with the write mask on
	while (len--) spi_transfer(*src++);
	gpio_set_level(CONFIG_NSS_GPIO, HIGH);
	return status;
}

void readFifo()
{
	gpio_set_level(CONFIG_NSS_GPIO, LOW);
	spi_transfer(RH_RF69_REG_00_FIFO); // Send the start address with the write mask off
	uint8_t payloadlen = spi_transfer(0); // First byte is payload len (counting the headers)
	if (payloadlen <= RH_RF69_MAX_ENCRYPTABLE_PAYLOAD_LEN &&
	payloadlen >= RH_RF69_HEADER_LEN)
	{
	_rxHeaderTo = spi_transfer(0);
	// Check addressing
	if (_promiscuous ||
		_rxHeaderTo == _thisAddress ||
		_rxHeaderTo == RH_BROADCAST_ADDRESS)
	{
		// Get the rest of the headers
		_rxHeaderFrom  = spi_transfer(0);
		_rxHeaderId    = spi_transfer(0);
		_rxHeaderFlags = spi_transfer(0);
		// And now the real payload
		for (_bufLen = 0; _bufLen < (payloadlen - RH_RF69_HEADER_LEN); _bufLen++)
		_buf[_bufLen] = spi_transfer(0);
		_rxGood++;
		_rxBufValid = true;
	}
	}
	gpio_set_level(CONFIG_NSS_GPIO, HIGH);
	// Any junk remaining in the FIFO will be cleared next time we go to receive mode.
}

bool available()
{
	// Get the interrupt cause
	uint8_t irqflags2 = spiRead(RH_RF69_REG_28_IRQFLAGS2);
	ESP_LOGD(TAG, "available irqflags2=%x", irqflags2);
	// Must look for PAYLOADREADY, not CRCOK, since only PAYLOADREADY occurs _after_ AES decryption
	// has been done
	if (irqflags2 & RH_RF69_IRQFLAGS2_PAYLOADREADY) {
		// A complete message has been received with good CRC
		_lastRssi = -((int8_t)(spiRead(RH_RF69_REG_24_RSSIVALUE) >> 1));
		_lastPreambleTime = millis();

		setModeIdle();
		// Save it in our buffer
		readFifo();
		ESP_LOGD(TAG, "PAYLOADREADY");
	}
	setModeRx(); // Make sure we are receiving
	return _rxBufValid;
}
