==> jeyabalan-1902/SmartTouchX/STM32_DISPLAY_APP/Core/Src/RFM/rf69.c <==
#include "rf69.h"
#include "main.h"
#include <string.h>
#include <stdio.h>
#include <stdbool.h>
#include "user_app.h"
#define RH_BROADCAST_ADDRESS  0xff
#define CONFIG_FSK  (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_FSK | RH_RF69_DATAMODUL_MODULATIONSHAPING_FSK_NONE)
#define CONFIG_GFSK (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_FSK | RH_RF69_DATAMODUL_MODULATIONSHAPING_FSK_BT1_0)
#define CONFIG_OOK  (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_OOK | RH_RF69_DATAMODUL_MODULATIONSHAPING_OOK_NONE)
#define CONFIG_NOWHITE    (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_NONE | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define CONFIG_WHITE      (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_WHITENING | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define CONFIG_MANCHESTER (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_MANCHESTER | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define LOW  0
#define HIGH 1

uint8_t spiRead(uint8_t reg)
{
	uint8_t val;
	uint8_t TxDt;

	TxDt = (reg & ~RH_RF69_SPI_WRITE_MASK);
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_RESET);
	HAL_SPI_Transmit(&hspi3, &TxDt,sizeof(TxDt), 1000);                   // Send the address with the write mask off
	HAL_SPI_Receive(&hspi3, &val, sizeof(val), 1000);                     // The written value is ignored, reg value is read
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_SET);
	return val;
}

uint8_t spiWrite(uint8_t reg, uint8_t val)
{
	uint8_t TxDt;
	uint8_t status = 0;

	TxDt = (reg | RH_RF69_SPI_WRITE_MASK);
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_RESET);
	HAL_SPI_TransmitReceive(&hspi3, &TxDt, &status, sizeof(TxDt), 1000); // Send the address with the write mask on
	HAL_SPI_Transmit(&hspi3, &val, sizeof(val), 1000);                   // New value follows
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_SET);
	return status;
}

uint8_t spiBurstRead(uint8_t reg, uint8_t* dest, uint8_t len)
{
	uint8_t TxDt;
	uint8_t dummyData =0;
	uint8_t rxDt =0;
	uint8_t status = 0;
	TxDt = (reg & ~RH_RF69_SPI_WRITE_MASK);
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_RESET);
	HAL_SPI_TransmitReceive(&hspi3, &TxDt, &status, sizeof(TxDt), 1000); // Send the start address with the write mask off
	while (len--)
	{
		HAL_SPI_TransmitReceive(&hspi3, &dummyData, &rxDt, sizeof(rxDt), 1000);
		*dest++ = rxDt;
	}
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_SET);
	return status;
}

uint8_t spiBurstWrite(uint8_t reg, const uint8_t* src, uint8_t len)
{
	uint8_t TxDt;
	uint8_t status = 0;
	uint8_t TxDt1;
	TxDt = (reg | RH_RF69_SPI_WRITE_MASK);
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_RESET);
	HAL_SPI_TransmitReceive(&hspi3, &TxDt, &status, sizeof(TxDt), 1000);  // Send the start address with the write mask on
	while (len--)
	{
		TxDt1 = *src++;
		HAL_SPI_Transmit(&hspi3, &TxDt1, sizeof(TxDt1), 1000);            // New value follows
	}
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_SET);
	return status;
}

void readFifo()
{
	uint8_t Data;
	uint8_t payloadlen ;

	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, 0);
	Data = RH_RF69_REG_00_FIFO;
	HAL_SPI_Transmit(&hspi3, &Data, sizeof(Data), 100) ;			// Send the start address with the write mask off
	HAL_SPI_Receive(&hspi3, &payloadlen, sizeof(payloadlen), 100);	// First byte is payload len (counting the headers)
	safe_printf("PayloadLen:%d\n",payloadlen);
	if (payloadlen <= RH_RF69_MAX_ENCRYPTABLE_PAYLOAD_LEN && payloadlen >= RH_RF69_HEADER_LEN)
	{
		HAL_SPI_Receive(&hspi3, &_rxHeaderTo, sizeof(_rxHeaderTo), 100);
		printf("_rxHeaderTo:%d\n",_rxHeaderTo);
		// Check addressing
		if (_promiscuous ||	_rxHeaderTo == _thisAddress ||_rxHeaderTo == RH_BROADCAST_ADDRESS)
		{
			// Get the rest of the headers
			HAL_SPI_Receive(&hspi3, &_rxHeaderFrom, sizeof(_rxHeaderFrom), 1000);
			safe_printf("_rxHeaderFrom:%d\n",_rxHeaderFrom);
			HAL_SPI_Receive(&hspi3, &_rxHeaderId, sizeof(_rxHeaderId), 1000);
			safe_printf("_rxHeaderId:%d\n",_rxHeaderId);
			HAL_SPI_Receive(&hspi3, &_rxHeaderFlags, sizeof(_rxHeaderFlags), 1000);
			safe_printf("_rxHeaderFlags:%d\n",_rxHeaderFlags);

			// And now the real payload
			for (_bufLen = 0; _bufLen < (payloadlen - RH_RF69_HEADER_LEN); _bufLen++)
			{
				HAL_SPI_Receive(&hspi3, &_buf[_bufLen], 1, 1000);
			}
				_rxGood++;
				_rxBufValid = true;
		}
	}
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, 1);
	// Any junk remaining in the FIFO will be cleared next time we go to receive mode.
}

bool available()
{
	// Get the interrupt cause
	uint8_t irqflags2 = spiRead(RH_RF69_REG_28_IRQFLAGS2);
//		printf("available irqflags2=%x\n", irqflags2);
	// Must look for PAYLOADREADY, not CRCOK, since only PAYLOADREADY occurs _after_ AES decryption
	// has been done
	if (irqflags2 & RH_RF69_IRQFLAGS2_PAYLOADREADY) {
		// A complete message has been received with good CRC
		_lastRssi = -((int8_t)(spiRead(RH_RF69_REG_24_RSSIVALUE) >> 1));
		_lastPreambleTime = HAL_GetTick();

		setModeIdle();
		// Save it in our buffer
		readFifo();
		safe_printf("PAYLOADREADY\n");
	}
	setModeRx(); // Make sure we are receiving
	return _rxBufValid;
}
